[package]
name = "mles-client"
version = "2.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8"
scrypt = "0.11"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
blake2 = "0.10"
base64 = "0.21"
rpassword = "7.0"
clap = { version = "4.4", features = ["derive"] }
siphasher = "1"
