[package]
name = "mles-client"
version = "2.1.1"
edition = "2024"
description = "A prototype implementation of the Mles v2 protocol with end-to-end encryption support"
license = "MPL-2.0"
repository = "https://github.com/jq-rs/mles-client"
keywords = ["mles", "websocket", "chat", "client", "proxy"]
categories = ["network-programming", "cryptography"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8"
scrypt = "0.11"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
blake2 = "0.10"
base64 = "0.21"
rpassword = "7.0"
clap = { version = "4.4", features = ["derive"] }
siphasher = "1"
rumqttc = "0.23"
url = "2.5"
